--- a/index.css
+++ b/index.css
@@ -9,11 +9,24 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
-  position: relative;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 .canvas-wrap {
@@ -42,4 +55,23 @@ body {
 canvas {
   rotate: -90deg;
   pointer-events: none;
+}
+
+.input-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-info {
+  display: flex;
+}
+
+.product-info input {
+  width: 80px;
+}
+
+.add-button {
+  width: 30px;
 }
