Fix(index.css): result-box 떨림 수정

--- a/index.css
+++ b/index.css
@@ -83,6 +83,10 @@ body {
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
+.result {
+  height: 64px;
+}
+
 canvas {
   /* rotate: -90deg; */
   pointer-events: none;
