--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ body {
 
 .wrapper {
   width: 100%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,18 +78,16 @@ body {
   position: relative;
 }
 
-.canvas-wrap:before {
-  content: "";
+.canvas-spinner-arrow {
   position: absolute;
   top: -14px;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 15px;
-  z-index: 999;
   width: 50px;
   height: 50px;
   background-image: url(./images/spinner-stop-arrow.svg);
-  background-position: 50%;
+  /* background-position: 50%; */
   background-repeat: no-repeat;
   background-size: 50px;
 }
