--- a/refact/styles/index.css
+++ b/refact/styles/index.css
@@ -1,7 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Jersey+15&family=Noto+Sans+KR:wght@100..900&display=swap");
+
+@font-face {
+  font-family: "neodgm";
+  src: url("../fonts/neodgm.woff2") format("woff2"), url("../fonts/neodgm.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: "neodgm";
+}
+
+.backdrop-area {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-image: url(../images/backdrop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -2;
+}
+
+.backdrop-filter {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(50px);
+  z-index: -1;
 }
 
 .container {
@@ -10,47 +43,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.sub-menu {
-}
-
-.canvas-area {
-  position: relative;
-}
-
-.pointer {
-  position: absolute;
-  top: -35px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 50px;
-  height: 50px;
-  z-index: 1;
-  transform-origin: 50% 0%;
-  transition: transform 0.05s ease;
-  user-select: none;
-  pointer-events: none;
-  background-image: url(../images/pointer.svg);
-  background-position: center;
-  background-size: cover;
-}
-
-.pointer.bounce {
-  animation: pointerBounce 0.15s ease;
-}
-
-@keyframes pointerBounce {
-  0% {
-    transform: translateX(-50%) rotate(0deg);
-  }
-  25% {
-    transform: translateX(-50%) rotate(-20deg);
-  }
-  75% {
-    transform: translateX(-50%) rotate(5deg);
-  }
-  100% {
-    transform: translateX(-50%) rotate(0deg);
-  }
+  gap: 15px;
 }
