--- a/refact/styles/spinner.css
+++ b/refact/styles/spinner.css
@@ -9,11 +9,11 @@
 
 .pointer {
   position: absolute;
-  top: -35px;
+  top: -42px;
   left: 50%;
   transform: translateX(-50%);
   width: 50px;
-  height: 50px;
+  height: 81px;
   z-index: 1;
   transform-origin: 50% 0%;
   transition: transform 0.05s ease;
@@ -21,12 +21,14 @@
   pointer-events: none;
   background-image: url(../images/pointer.svg);
   background-position: center;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 80% 80%;
+  filter: drop-shadow(0px 0px 2px #000000);
 }
 
 .rotate-btn {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -38,8 +40,8 @@
 }
 
 .stop-btn {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   position: absolute;
   top: 50%;
   left: 50%;
