--- a/refact/styles/winner.css
+++ b/refact/styles/winner.css
@@ -84,3 +84,13 @@
   left: -20px;
   filter: drop-shadow(0px 2px 3px #404040);
 }
+
+.dirt-floor {
+  width: 100%;
+  height: 45px;
+  margin-top: 53px;
+  background-color: black;
+  background-image: url(../images/dirt.png);
+  background-size: 30%;
+  filter: drop-shadow(0px 5px 5px #404040);
+}
