--- a/refact/styles/index.css
+++ b/refact/styles/index.css
@@ -54,6 +54,7 @@
 }
 
 .spinner-menu {
+  max-height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,7 +62,6 @@
 }
 
 .menu-box {
-  max-height: 500px;
   overflow-x: hidden;
   overflow-y: scroll;
 }
@@ -82,8 +82,33 @@
   text-align: left;
 }
 
+.menu-head {
+  border-collapse: collapse;
+}
+
 .menu-item > th {
-  padding: 4px 8px;
+  padding: 4px 4px;
+}
+
+.menu-item > th.color {
+  width: 50px;
+  height: 20px;
+}
+
+.menu-item > th.game {
+  width: 200px;
+}
+
+.menu-item > th.length {
+  width: 60px;
+}
+
+.menu-item > th.percent {
+  width: 60px;
+}
+
+.menu-item > th.trash {
+  width: 50px;
 }
 
 .menu-item > td {
