--- a/styles/winner.css
+++ b/styles/winner.css
@@ -86,11 +86,11 @@
   filter: drop-shadow(0px 2px 3px #404040);
 }
 
-.left {
+.bbuming {
   left: -20px;
 }
 
-.right {
+.bburincle {
   right: -20px;
 }
 
