--- a/styles/spinner.css
+++ b/styles/spinner.css
@@ -86,16 +86,16 @@
 
 .size-area {
   width: 100%;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 25px;
+  gap: 20px;
   position: absolute;
 }
 
 .size-area > div > input {
   width: 40px;
-  margin-top: 20px;
   font-size: 15px;
   line-height: 15px;
   border: none;
@@ -105,4 +105,10 @@
 
 .size-area > div > input:focus {
   outline: none;
+}
+
+.size-area > div > .speaker {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
 }
