--- a/styles/index.css
+++ b/styles/index.css
@@ -38,13 +38,14 @@ body {
 .update-text-area {
   width: 410px;
   position: absolute;
-  top: calc(50% + 196px);
-  left: calc(50% + 25px);
+  top: calc(50% + 200px);
+  left: calc(50% + 35px);
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   gap: 5px;
   color: white;
+  pointer-events: none;
 }
 
 .update-text {
@@ -53,37 +54,37 @@ body {
 }
 
 .update-btn {
-  width: 360px;
-  font-size: 14px;
-  line-height: 14px;
+  width: 100px;
+  font-size: 16px;
+  line-height: 16px;
   position: absolute;
-  top: calc(50% + 245px);
+  top: calc(50% + 250px);
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   gap: 5px;
-  padding: 9px 0px;
-  border: 1px dotted white;
-  border-radius: 5px;
+  padding: 12px 0px;
+  border: none;
   color: white;
   background-color: transparent;
-  transition: background-color 0.5s ease, color 0.5s ease, border 0.5s ease;
+  background-image: url(../images/wood-button.svg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
   cursor: pointer;
 }
 
-.update-btn:hover {
-  border: 1px dotted black;
-  color: black;
-  background-color: white;
-}
-
-.bbeggom-bbuming {
-  width: 400px;
+.bbeggom-area {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.bbeggom-bbuming {
+  width: 420px;
+  display: block;
 }
 
 .backdrop-area {
