Feat(standby.js): 대기 화면 텍스트 타이핑 효과 추가 - 대기 화면 텍스트 종류 추가 - 대기 화면 텍스트 타이핑 지우기, 입력 효과 추가

--- a/styles/standby-screen.css
+++ b/styles/standby-screen.css
@@ -17,7 +17,7 @@
 
 .standby-text-area {
   position: absolute;
-  top: calc(50% + 200px);
+  top: calc(50% + 195px);
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -30,6 +30,7 @@
 .standby-text {
   font-size: 25px;
   line-height: 25px;
+  position: relative;
 }
 
 .standby-btn {
