--- a/styles/winner.css
+++ b/styles/winner.css
@@ -83,6 +83,13 @@
   width: 100px;
   position: absolute;
   bottom: -80px;
+  filter: drop-shadow(0px 2px 2px #404040);
+}
+
+.pet {
+  width: 62px;
+  position: absolute;
+  bottom: -73px;
   filter: drop-shadow(0px 2px 3px #404040);
 }
 
@@ -105,6 +112,10 @@
   right: -20px;
 }
 
+.maneul {
+  left: 66px;
+}
+
 .percent-in-sign {
   white-space: nowrap;
   position: absolute;
@@ -123,5 +134,5 @@
   background-color: black;
   background-image: url(../images/dirt.svg);
   background-size: 30%;
-  filter: drop-shadow(0px 5px 5px #404040);
+  filter: drop-shadow(0px 20px 20px #404040);
 }
